# ImageMagick

./: .project  CMakeLists.txt  ConfigureChecks.cmake  ConfigurePrefix.cmake  README.rst  configure  index.html
Magick++/: CMakeLists.txt
Magick++/lib/Magick++/: BlobRef.h  Geometry.h  Image.h  ImageRef.h  Pixels.h  STL.h
MagickCore/: CMakeLists.txt  coders.cmake  configure.c  locale.c  magick-baseconfig.h  method-attribute.h  methods.h  nt-base-private.h  quantum-import.c  static.c  static.h  utility-private.h  version.c  version.h
PerlMagick/: Magick.pm  Makefile.PL
PerlMagick/default/: Magick.pm  Makefile.PL
PerlMagick/quantum/: Makefile.PL  quantum.pm
coders/: analyze.c  dcm.c  tiff.c
config/: config.h.cmake  configure.xml.in
magick/: CMakeLists.txt  coders.cmake  locale_.h  magick-config.h  methods.h  nt-base.c  nt-base.h  quantum-import.c  static.c  static.h  studio.h  version.h
utilities/: ImageMagick.1  animate.1  compare.1  composite.1  conjure.1  convert.1  display.1  identify.1  import.1  magick-script.1  magick.1  mogrify.1  montage.1  stream.1
www/: ImageMagickObject.html  advanced-unix-installation.html  advanced-windows-installation.html  animate.html  api.html  architecture.html  binary-releases.html  changelog.html  cipher.html  color.html  command-line-options.html  command-line-processing.html  command-line-tools.html  compare.html  compose.html  composite.html  conjure.html  contact.html  convert.html  display.html  download.html  escape.html  examples.html  exception.html  export.html  formats.html  fx.html  high-dynamic-range.html  identify.html  import.html  index.html  install-source.html  jp2.html  license.html  links.html  magick++.html  magick-core.html  magick-vector-graphics.html  magick-wand.html  miff.html  (+13 more)
www/api/: animate.html  annotate.html  attribute.html  blob.html  cache-view.html  cache.html  cipher.html  color.html  colormap.html  compare.html  composite.html  constitute.html  decorate.html  deprecate.html  display.html  distort.html  draw.html  drawing-wand.html  effect.html  enhance.html  exception.html  feature.html  fourier.html  fx.html  histogram.html  image-view.html  image.html  layer.html  list.html  magick-deprecate.html  magick-image.html  magick-property.html  magick-wand.html  magick.html  memory.html  module.html  mogrify.html  monitor.html  montage.html  morphology.html  (+17 more)
