
PROJECT( CORE_Magick++ )

SET( FINAL_LIBRARY_TARGET_NAME Magick++ )
FILE( GLOB ${LIBRARY_TARGET_NAME}_PUBLIC_HDRS lib/Magick++/*.h )
FILE( GLOB ${LIBRARY_TARGET_NAME}_SRCS lib/*.cpp )

STRING( TOUPPER ${LIBRARY_TARGET_NAME} UPPERCASE_LIBRARY_TARGET_NAME )
SET( LIBRARY_CONFIG_FILE ${CMAKE_CURRENT_BINARY_DIR}/${FINAL_LIBRARY_TARGET_NAME}-config.cmake )
SET( MAGICK_HEADER_FILE ${CMAKE_CURRENT_BINARY_DIR}/../magick/magick-config.h )

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_BINARY_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/lib )
ADD_LIBRARY( ${LIBRARY_TARGET_NAME} ${LIBRARY_BUILD_TYPE} 
	${${LIBRARY_TARGET_NAME}_SRCS} 
	${MAGICK_HEADER_FILE}
	${${LIBRARY_TARGET_NAME}_PRIVATE_HDRS} 
	${${LIBRARY_TARGET_NAME}_PUBLIC_HDRS} 
	${${LIBRARY_TARGET_NAME}_WIN32_XTRAS} )
SET_TARGET_PROPERTIES( ${LIBRARY_TARGET_NAME} PROPERTIES OUTPUT_NAME ${FINAL_LIBRARY_TARGET_NAME} )

# Install targets
IF( WIN32 AND NOT IMAGEMAGICK_BUILD_STATIC_LIB )
	SET_TARGET_PROPERTIES( ${LIBRARY_TARGET_NAME} PROPERTIES IMPORT_SUFFIX _dll.lib )
	INSTALL( TARGETS ${LIBRARY_TARGET_NAME} ARCHIVE
		DESTINATION ${LIB_INSTALL_DIR} )
ENDIF( WIN32 AND NOT IMAGEMAGICK_BUILD_STATIC_LIB )

install(TARGETS ${LIBRARY_TARGET_NAME}
     EXPORT imagemagick-config
	 DESTINATION ${LIB_INSTALL_DIR}
	 INCLUDES DESTINATION include)
install(FILES ${${LIBRARY_TARGET_NAME}_PUBLIC_HDRS}
	DESTINATION include/Magick++)
install(FILES lib/Magick++.h
	DESTINATION include)	

